--- a/.gitconfig
+++ b/.gitconfig
@@ -1,11 +1,20 @@
 [user]
-    name = Huaqo
-    email = joa.gottlebe@gmail.com
+	name = huaqo-games
+	email = joaquingottlebe@icloud.com
 
 [credential]
-    helper = osxkeychain
+	helper = /usr/local/share/gcm-core/git-credential-manager
 
 [core]
 	excludesfile = /Users/huaqo/.gitignore_global
 [http]
 	postBuffer = 524288000
+[credential "https://dev.azure.com"]
+	useHttpPath = true
+[credential "https://gitup.uni-potsdam.de"]
+	provider = generic
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
