--- a/.config/homebrew/Brewfile
+++ b/.config/homebrew/Brewfile
@@ -1,4 +1,6 @@
 tap "huaqo/huaqo"
+tap "homebrew/cask"
+tap "homebrew/cask-fonts"
 
 brew "gcc"
 brew "bitwarden-cli"
@@ -21,3 +23,20 @@ brew "unar"
 brew "yt-dlp"
 brew "zsh-autosuggestions"
 brew "zsh-syntax-highlighting"
+brew "qgis@ltr"
+brew "gdal"
+brew "git-credential-manager"
+brew "sdl2"
+
+cask "audacity"
+cask "discord"
+cask "firefox"
+cask "kitty"
+cask "obsidian"
+cask "signal"
+cask "steam"
+cask "telegram"
+cask "tiled"
+cask "whatsapp"
+cask "zotero"
+cask "font-hack-nerd-font"
